update after the review